SERVER-56350 Add default value to OwnedValueAccessor::_val